# picotool-rs

./: .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  LICENSE-MIT  README.md
.claude/: settings.json
.claude/hooks/: git-guard.sh  rust-postedit.sh
.githooks/: pre-commit  pre-merge-commit  pre-push
.github/workflows/: ci.yml  release.yml
docs/: references.md
docs/adr/: 0001-scope-flasher-first-rp2040-only.md  0002-usb-access-via-nusb-and-termux-fd.md  0003-clean-room-reimplementation-and-license.md  0004-termux-device-self-reexec.md  0005-runtime-flash-size-detection.md
src/: constants.rs  detect.rs  device.rs  lib.rs  load.rs  main.rs  picoboot.rs  uf2.rs
